welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: not found: value getMondeHauteru
    if (y==getMondeHauteru) {
           ^