welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var x=getX()
  var y=getY()
  var pas=0
  while (!posFinale(x,y)) {
    ecritMessage(pas.toString)
    if (y==getMondeHauteru) {
      setPos(0, y+1)
    } else setPos(x-1, y)   
    x=getX()
    y=getY() 
    pas=pas+1  
  }
  ecritMessage(pas.toString)
}

def posFinale(x:Int,y:Int):Boolean = {
  var yf=getMondeHauteur()-1
  var xf=getMondeLargeur()-1
  if (y==yf & x==xf) {
    return true
  } else return false
}
